--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-handlebars": "^5.3.3",
     "hbs": "^4.1.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
     "mongoose": "^5.13.5",
     "morgan": "~1.9.1"
